# datalog-rs

./: Cargo.toml  README.md
examples/: interpreter.rs  railroad.rs
macros/: Cargo.toml
macros/src/: common.rs  datalog.rs  datalog_trans.rs  lib.rs
src/: ast.rs  lib.rs  log.rs  safe_ast.rs  tests.rs  visit.rs
src/ast/: mod.rs  visit.rs  visit_mut.rs
src/interpreter/: interpretation.rs  interpretation_old.rs  ir.rs  knowledge_base.rs  mod.rs  quantify.rs  state.rs  universe.rs
src/interpreter/ir/: mod.rs
src/ir/: compile.rs  idents.rs  mod.rs  visit.rs  visit_mut.rs
src/parser/: atoms.rs  exprs.rs  literals.rs  mod.rs  phrases.rs  rules.rs  specs.rs  tokens.rs  whitespace0.rs  whitespaces.rs
src/transitions/: ast.rs  mod.rs
src/transitions/interpreter/: mod.rs  state.rs
src/transitions/parser/: ident.rs  idents.rs  mod.rs  postulation.rs  postulations.rs  specs.rs  tokens.rs  transition.rs  transitions.rs  trigger.rs  triggers.rs
tests/: ab.dl  friendship.dl  no-base.dl  not-iterable.dl  race.dlt  recursive-atoms.dl  recursive.dl
