[package]
name = "datalog"
version = "0.2.0"
edition = "2021"
authors = ["Tim Müller"]
repository = "https://github.com/Lut99/datalog-rs"
description = "A simple Datalog^\\neg interpreter to support the language as discussed in the paper."


[[example]]
name = "interpreter"
path = "examples/interpreter.rs"
required-features = ["interpreter", "log", "parser"]

[[example]]
name = "railroad"
path = "examples/railroad.rs"
required-features = ["railroad"]


[dependencies]
ast-toolkit = { git = "https://github.com/Lut99/ast-toolkit-rs", features = ["derive", "punctuated", "span", "tokens"] }
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
indexmap = "2.7.0"
itertools = "0.13.0"
log = { version = "0.4.22", optional = true }
paste = "1.0.15"

datalog-macros = { path = "./macros", optional = true }


[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.10"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
log = "0.4.22"


[features]
default = []

transitions = ["datalog-macros/transitions"]

interpreter = []
parser = ["ast-toolkit/snack"]
reserialize = []

macros = ["dep:datalog-macros"]
log = ["dep:log"]
railroad = ["ast-toolkit/railroad"]


[workspace]
resolver = "2"
members = ["./macros"]
