[package]
name = "datalog"
version = "0.2.0"
edition = "2021"
authors = ["Tim Müller"]
repository = "https://github.com/Lut99/datalog-rs"
description = "A simple Datalog^\\neg interpreter to support the language as discussed in the paper."


[[example]]
name = "interpreter"
path = "examples/interpreter.rs"
required-features = ["interpreter", "log", "parser"]

[[example]]
name = "railroad"
path = "examples/railroad.rs"
required-features = ["railroad"]


[dependencies]
indexmap = "2.7"
itertools = "0.14"
log = { version = "0.4", optional = true }
paste = "1.0"

ast-toolkit = { git = "https://github.com/Lut99/ast-toolkit-rs", features = ["derive", "punctuated", "span", "tokens"] }
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.1.0", features = ["derive"] }
better-derive = { git = "https://github.com/Lut99/better-derive-rs", tag = "v1.4.0" }
# stackvec = { git = "https://github.com/Lut99/stackvec-rs", optional = true }

datalog-macros = { path = "./macros", optional = true }


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
log = "0.4"

error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }


[features]
default = []

transitions = ["datalog-macros/transitions"]

interpreter = ["ir"]
ir = []
parser = ["ast-toolkit/snack"]
visit = []
visit-mut = []

macros = ["dep:datalog-macros"]
log = ["dep:log"]
railroad = ["ast-toolkit/railroad"]


[workspace]
resolver = "2"
members = ["./macros"]
